--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,14 @@ html {
     line-height: 1.4;
 }
 
+
+.container {
+    background: black;
+    height: 100%;
+    width: 100%;
+    color: white;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
