--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,17 @@ body {
     font-size: 20px;
 }
 
+
+.video-container {
+    text-align: center;
+}
+
+.video-container img {
+    padding: 100px;
+    width: 150px;
+}
+
+
 .navbar {
     background: black;
     padding: 20px;
